# aie4-smart-travel-planner

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: main.py
backend/app/: config.py  database.py  deps.py  lifespan.py  logging_config.py  retries.py
backend/app/agent/: graph.py  nodes.py  runner.py  state.py
backend/app/ml/: classifier.joblib  model.py
backend/app/models/: __init__.py  document.py
backend/app/prompts/: chat.py  parse.py
backend/app/rag/: retriever.py
backend/app/routes/: chat.py  classify.py  health.py  parse.py  retrieve.py
backend/app/schemas/: chat.py  classify.py  retrieve.py
backend/app/services/: llm.py
backend/app/tools/: base.py  classifier.py  rag.py  registry.py
data/: destinations.csv  destinations_1000.csv
data/raw_wikivoyage/: Bali.txt  Bangkok.txt  Beirut.txt  Cancun.txt  Cape_Town.txt  Dubai.txt  Hvar.txt  Kathmandu.txt  Kotor.txt  Madeira.txt  Monaco.txt  Reykjavik.txt  Riga.txt  Rome.txt  Sydney.txt  Tokyo.txt
docs/: SPEC.md  SPEC_LITE.md
notebooks/: smart_travel_planner.ipynb
scripts/: scraper.py
scripts/rag/: chunker.py  embed.py
